--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Button with Alert</title>
+    <script>
+        function showAlert() {
+            alert('Hello, world!');
+        }
+    </script>
+</head>
 <body>
-  <h1>Hello</h1>
-</body>  
+    <button onclick="showAlert()">Click Me</button>
+</body>
 </html>
-
